tests/NormalTests/paczka1/fuzzy1/67619115.err
Error in line 10: S548 S427 45,0
Error in line 17: LjrPvD S434 68,4
Error in line 39: S548 A376 17,2
